completed text edits in solar game and classified game edition, manually checked both for errors, completed minor styling changes on home page so that alignment was correct

--- a/client/src/components/Home/style.css
+++ b/client/src/components/Home/style.css
@@ -1,6 +1,4 @@
 body {
-  width: 96%;
-  margin-left: 2%;
   text-align: center;
   color: whitesmoke;
 }
@@ -110,10 +108,6 @@ body {
   border-radius: 18px;
   border-style: solid;
   margin-top: 3%;
-}
-
-.row {
-  width: 95%;
 }
 
 @media (min-width: 1200px) {
